--- a/ProjectWeek/src/main/res/layout/fragment_signup.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_signup.xml
@@ -13,7 +13,8 @@
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/login"/>
+            android:text="@string/login" />
+
         <EditText
             android:id="@+id/loginText"
             android:layout_height="match_parent"
@@ -22,17 +23,19 @@
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/password"/>
+            android:text="@string/password" />
+
         <EditText
             android:id="@+id/passwordText"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword" />
 
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/lastname"/>
+            android:text="@string/lastname" />
+
         <EditText
             android:id="@+id/lastname"
             android:layout_height="match_parent"
@@ -41,37 +44,68 @@
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/firstname"/>
+            android:text="@string/sex" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="M" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="F" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/firstname" />
+
         <EditText
             android:id="@+id/firstname"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:inputType="textPersonName"/>
+            android:inputType="textPersonName" />
 
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/email"/>
+            android:text="@string/email" />
+
         <EditText
             android:id="@+id/email"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:inputType="textEmailAddress"/>
+            android:inputType="textEmailAddress" />
 
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/birthdate"/>
+            android:text="@string/birthdate" />
+
         <EditText
             android:id="@+id/birthdate"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:inputType="date"/>
+            android:inputType="date" />
 
         <Button
             android:id="@+id/signUp"
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
-            android:text="@string/signUp"/>
+            android:text="@string/signUp" />
     </LinearLayout>
 </RelativeLayout>
