--- a/ProjectWeek/src/main/res/layout/fragment_signup.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_signup.xml
@@ -4,115 +4,120 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:padding="25dp">
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/login" />
-
-        <EditText
-            android:id="@+id/loginText"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent" />
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/password" />
-
-        <EditText
-            android:id="@+id/passwordText"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:inputType="textPassword" />
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/lastname" />
-
-        <EditText
-            android:id="@+id/lastname"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent" />
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/firstname" />
-
-        <EditText
-            android:id="@+id/firstname"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:inputType="textPersonName" />
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/sex" />
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:padding="25dp">
 
             <TextView
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="M" />
-
-            <RadioButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="@string/login" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="F" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/email" />
-
-        <EditText
-            android:id="@+id/email"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:inputType="textEmailAddress" />
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/birthdate" />
-
-        <EditText
-            android:id="@+id/birthdate"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:inputType="date" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center">
-
-            <Button
-                android:id="@+id/signUp"
+            <EditText
+                android:id="@+id/loginText"
                 android:layout_height="match_parent"
+                android:layout_width="match_parent" />
+
+            <TextView
+                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="@string/signUp" />
+                android:text="@string/password" />
+
+            <EditText
+                android:id="@+id/passwordText"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:inputType="textPassword" />
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/lastname" />
+
+            <EditText
+                android:id="@+id/lastname"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent" />
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/firstname" />
+
+            <EditText
+                android:id="@+id/firstname"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:inputType="textPersonName" />
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/sex" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="M" />
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="F" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/email" />
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:inputType="textEmailAddress" />
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/birthdate" />
+
+            <EditText
+                android:id="@+id/birthdate"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:inputType="date" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/signUp"
+                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:text="@string/signUp" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
