--- a/ProjectWeek/src/main/res/layout/fragment_account.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_account.xml
@@ -15,67 +15,11 @@
 
         <ImageView
             android:id="@+id/profilePicture"
-            android:src="@drawable/photo_zara"
+            android:src="@drawable/photo_rodolpha_profil"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="15dp">
 
-            <TextView
-                android:id="@+id/profilePseudoTxt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="RODOLPHA_04"
-                android:textColor="@android:color/white"
-                android:textSize="17sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/profileTotalDesTxt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="TOTAL DES"
-                        android:textColor="@color/color2"
-                        android:textSize="20sp" />
-
-                    <TextView
-                        android:id="@+id/profilePointsTxt"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="POINTS"
-                        android:textSize="28sp"
-                        android:textColor="@color/color2"
-                        android:gravity="center_horizontal"
-                        android:layout_marginTop="-13dp"/>
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/profilePointsTotTxt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="13"
-                    android:layout_marginLeft="5dp"
-                    android:textSize="50sp"
-                    android:textColor="@color/color2"
-                    android:gravity="top"
-                    android:includeFontPadding="false"
-                    android:layout_marginTop="-10dp"/>
-
-            </LinearLayout>
-        </LinearLayout>
     </LinearLayout>
 
     <TextView
