--- a/ProjectWeek/src/main/res/layout/fragment_questionnaire_thanks.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_questionnaire_thanks.xml
@@ -23,35 +23,14 @@
             android:textStyle="bold"
             android:textColor="@android:color/white"
             android:text="Votre réponse a bien été enregistrée. Nous vous remercions de nous avoir donné un peu de votre temps."
-            android:layout_above="@+id/container" />
+            android:layout_above="@+id/image" />
 
-
-        <LinearLayout
+        <ImageView
+            android:id="@id/image"
             android:layout_centerInParent="true"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@id/container">
-
-            <TextView
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="35sp"
-                android:textStyle="bold"
-                android:textColor="@color/color2"
-                android:text="VOUS OBTENEZ" />
-
-            <TextView
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textSize="70sp"
-                android:textColor="@color/color2"
-                android:text="1 POINT" />
-        </LinearLayout>
+            android:src="@drawable/photo_1_point"/>
     </RelativeLayout>
 
     <Button
