--- a/ProjectWeek/src/main/res/layout/fragment_account.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_account.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
-        android:layout_marginTop="25dp">
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="25dp">
 
         <ImageView
             android:id="@+id/profilePicture"
