--- a/ProjectWeek/src/main/res/layout/fragment_connexion.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_connexion.xml
@@ -86,7 +86,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/icone_pseudo"
-            android:layout_marginLeft="8px"/>
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"/>
 
         <EditText
             android:id="@+id/login"
