--- a/ProjectWeek/src/main/res/layout/fragment_manage.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_manage.xml
@@ -10,6 +10,7 @@
         android:layout_height="0dp"
         android:background="@color/color1"
         android:id="@+id/button1"
+        android:clickable="true"
         android:layout_weight="1">
 
         <ImageView
@@ -19,6 +20,7 @@
             android:layout_alignParentRight="true"
             android:layout_height="wrap_content"
             android:id="@+id/account"
+            android:clickable="true"
             android:src="@drawable/icone_profil_violet"/>
 
 
@@ -53,6 +55,7 @@
         android:background="@color/color7"
         android:gravity="center"
         android:id="@+id/button2"
+        android:clickable="true"
         android:layout_weight="1">
 
         <TextView
