--- a/ProjectWeek/src/main/res/layout/fragment_questionnaire.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_questionnaire.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:paddingTop="30dp"
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -53,7 +54,6 @@
         android:text="Que pensez vous de la nouvelle collection printemps/été ?"/>
 
     <LinearLayout
-        android:padding="10dp"
         android:id="@+id/container"
         android:orientation="vertical"
         android:layout_width="wrap_content"
