--- a/ProjectWeek/src/main/res/layout/item_quesitonnaire.xml
+++ b/ProjectWeek/src/main/res/layout/item_quesitonnaire.xml
@@ -14,6 +14,4 @@
     android:paddingBottom="10dp"
     android:text="test"
     android:background="@color/color2"
-    android:layout_height="wrap_content">
-
-</TextView>
+    android:layout_height="wrap_content"/>
