--- a/ProjectWeek/src/main/res/layout/fragment_signup.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_signup.xml
@@ -2,122 +2,138 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/color6">
 
-    <ScrollView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:padding="25dp">
 
         <LinearLayout
-            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sex_m"
+                android:background="@color/color7"
+                android:layout_marginRight="25dp"
+                android:padding="15dp"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sex_f"
+                android:padding="15dp"
+                android:background="@color/color7"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:padding="25dp">
-
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/login" />
+            android:layout_marginTop="20dp">
 
             <EditText
-                android:id="@+id/loginText"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent" />
-
-            <TextView
+                android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/password" />
+                android:hint="@string/lastname"
+                android:layout_marginRight="20dp"
+                android:background="@color/color7"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textSize="20sp"
+                android:padding="10dp" />
 
             <EditText
-                android:id="@+id/passwordText"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:inputType="textPassword" />
-
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/lastname" />
-
-            <EditText
-                android:id="@+id/lastname"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent" />
-
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/firstname" />
-
-            <EditText
-                android:id="@+id/firstname"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:inputType="textPersonName" />
-
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/sex" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="M" />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="F" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/email" />
-
-            <EditText
-                android:id="@+id/email"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:inputType="textEmailAddress" />
-
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/birthdate" />
-
-            <EditText
-                android:id="@+id/birthdate"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:inputType="date" />
-
-            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center">
+                android:hint="@string/firstname"
+                android:background="@color/color7"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textSize="20sp"
+                android:padding="10dp" />
 
-                <Button
-                    android:id="@+id/signUp"
-                    android:layout_height="match_parent"
-                    android:layout_width="wrap_content"
-                    android:text="@string/signUp" />
-            </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
+
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/age"
+                android:background="@color/color7"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textSize="20sp"
+                android:padding="10dp"
+                android:layout_marginRight="20dp"
+                android:inputType="numberDecimal" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/profession"
+                android:background="@color/color7"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textSize="20sp"
+                android:padding="10dp" />
+
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/loginText"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:hint="@string/login"
+            android:background="@color/color7"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white"
+            android:textSize="20sp"
+            android:layout_marginTop="20dp"
+            android:padding="10dp" />
+
+        <EditText
+            android:layout_marginTop="20dp"
+            android:id="@+id/passwordText"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:inputType="textPassword"
+            android:hint="@string/password"
+            android:background="@color/color7"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white"
+            android:textSize="20sp"
+            android:padding="10dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"></LinearLayout>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/signUp"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:text="@string/signUp"
+        android:layout_alignParentBottom="true"
+        android:textColor="@android:color/white"
+        android:background="@color/color1"
+        android:gravity="center_horizontal"
+        android:padding="15dp"
+        android:textAllCaps="true"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 </RelativeLayout>
