--- a/ProjectWeek/src/main/res/layout/fragment_signup.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_signup.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/sex_m"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/sex_m"
@@ -26,6 +27,7 @@
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/sex_f"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/sex_f"
@@ -41,7 +43,7 @@
             android:layout_marginTop="20dp">
 
             <EditText
-                android:layout_width="160dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/lastname"
                 android:layout_marginRight="20dp"
@@ -49,9 +51,13 @@
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
                 android:textSize="20sp"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:singleLine="true"
+                android:layout_weight="1"
+                android:nextFocusDown="@+id/lastnameTxt"/>
 
             <EditText
+                android:id="@+id/lastnameTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/firstname"
@@ -59,7 +65,10 @@
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
                 android:textSize="20sp"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:singleLine="true"
+                android:layout_weight="1"
+                android:nextFocusDown="@+id/age"/>
 
         </LinearLayout>
 
@@ -69,6 +78,7 @@
             android:layout_marginTop="20dp">
 
             <EditText
+                android:id="@+id/age"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/age"
@@ -78,9 +88,12 @@
                 android:textSize="20sp"
                 android:padding="10dp"
                 android:layout_marginRight="20dp"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:singleLine="true"
+                android:nextFocusDown="@+id/professionTxt"/>
 
             <EditText
+                android:id="@+id/professionTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/profession"
@@ -88,7 +101,8 @@
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
                 android:textSize="20sp"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:singleLine="true" />
 
         </LinearLayout>
 
@@ -102,7 +116,8 @@
             android:textColorHint="@android:color/white"
             android:textSize="20sp"
             android:layout_marginTop="20dp"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:singleLine="true" />
 
         <EditText
             android:layout_marginTop="20dp"
@@ -115,12 +130,8 @@
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white"
             android:textSize="20sp"
-            android:padding="10dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"></LinearLayout>
+            android:padding="10dp"
+            android:singleLine="true" />
     </LinearLayout>
 
     <TextView
